--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,16 @@
-name: ci-and-publish
+name: test-and-publish
+
 on:
   push:
-    branches: [main]
-  tags:
-    - 'v*.*.*'
-  workflow_dispatch:
+    branches: [ main ]
+    tags: [ 'v*' ]
 
 permissions:
   contents: read
   packages: write
+
+env:
+  IMAGE: ghcr.io/${{ github.repository_owner }}/airbnb-price-prediction
 
 jobs:
   test:
@@ -16,34 +18,29 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+        with: { python-version: '3.11' }
       - run: pip install -r requirements.txt
       - run: pytest -q
 
-  build-and-push:
+  docker:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - uses: docker/metadata-action@v5
-        id: meta
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/airbnb-price-prediction
-          tags: |
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            type=ref,event=tag
-
       - uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            ${{ env.IMAGE }}:latest
+            ${{ env.IMAGE }}:${{ github.sha }}
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.title=Airbnb Berlin | Price Prediction API
+            org.opencontainers.image.licenses=MIT
